[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/starship/raptor_plume.tscn" type="PackedScene" id=1]
[ext_resource path="res://models/booster.gltf" type="PackedScene" id=2]
[ext_resource path="res://sound/starship_sound.ogg" type="AudioStream" id=3]
[ext_resource path="res://scenes/starship/booster.gd" type="Script" id=4]
[ext_resource path="res://textures/smoke_02.png" type="Texture" id=5]

[sub_resource type="SpatialMaterial" id=17]
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 5 )

[sub_resource type="QuadMesh" id=18]
material = SubResource( 17 )
size = Vector2( 5, 5 )

[sub_resource type="Curve" id=19]
_data = [ Vector2( 0, 0.243243 ), 0.0, 0.0, 0, 0, Vector2( 0.465409, 0.621622 ), 1.96181, 1.96181, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=20]
offsets = PoolRealArray( 0.00932401, 0.172494, 0.724942, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.554068, 0.554068, 0.554068, 1, 0.694693, 0.694693, 0.694693, 1, 0, 0, 0, 1 )

[node name="booster" type="Spatial"]
script = ExtResource( 4 )

[node name="booster_mesh" parent="." instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )

[node name="venting" type="Spatial" parent="booster_mesh"]

[node name="venting" type="CPUParticles" parent="booster_mesh/venting"]
transform = Transform( 0.71627, 0, -0.697823, 0, 1, 0, 0.697823, 0, 0.71627, 3.85963, 13.391, 2.91567 )
emitting = false
amount = 20
lifetime = 15.0
speed_scale = 3.1
randomness = 0.23
local_coords = false
mesh = SubResource( 18 )
direction = Vector3( 4.954, 0, 0 )
spread = 4.5
gravity = Vector3( 0, -0.3, 0 )
initial_velocity = 2.41
initial_velocity_random = 0.53
scale_amount = 3.8
scale_amount_curve = SubResource( 19 )
color = Color( 0.466667, 0.466667, 0.466667, 1 )
color_ramp = SubResource( 20 )

[node name="venting3" type="CPUParticles" parent="booster_mesh/venting"]
transform = Transform( -0.581163, 0, 0.813787, 0, 1, 0, -0.813787, 0, -0.581163, -3.07823, 13.391, -3.8435 )
emitting = false
amount = 20
lifetime = 15.0
speed_scale = 3.1
randomness = 0.23
local_coords = false
mesh = SubResource( 18 )
direction = Vector3( 4.954, 0, 0 )
spread = 4.5
gravity = Vector3( 0, -0.3, 0 )
initial_velocity = 2.41
initial_velocity_random = 0.53
scale_amount = 3.8
scale_amount_curve = SubResource( 19 )
color = Color( 0.466667, 0.466667, 0.466667, 1 )
color_ramp = SubResource( 20 )

[node name="venting2" type="CPUParticles" parent="booster_mesh/venting"]
transform = Transform( 0.700954, 0, 0.713206, 0, 1, 0, -0.713206, 0, 0.700954, 3.62373, 13.391, -3.4131 )
emitting = false
amount = 20
lifetime = 15.0
speed_scale = 3.1
randomness = 0.23
local_coords = false
mesh = SubResource( 18 )
direction = Vector3( 4.954, 0, 0 )
spread = 4.5
gravity = Vector3( 0, -0.3, 0 )
initial_velocity = 2.41
initial_velocity_random = 0.53
scale_amount = 3.8
scale_amount_curve = SubResource( 19 )
color = Color( 0.466667, 0.466667, 0.466667, 1 )
color_ramp = SubResource( 20 )

[node name="venting4" type="CPUParticles" parent="booster_mesh/venting"]
transform = Transform( -0.668658, 0, -0.74357, 0, 1, 0, 0.74357, 0, -0.668658, -3.36525, 13.391, 3.69804 )
emitting = false
amount = 20
lifetime = 15.0
speed_scale = 3.1
randomness = 0.23
local_coords = false
mesh = SubResource( 18 )
direction = Vector3( 4.954, 0, 0 )
spread = 4.5
gravity = Vector3( 0, -0.3, 0 )
initial_velocity = 2.41
initial_velocity_random = 0.53
scale_amount = 3.8
scale_amount_curve = SubResource( 19 )
color = Color( 0.466667, 0.466667, 0.466667, 1 )
color_ramp = SubResource( 20 )

[node name="venting_top1" type="CPUParticles" parent="booster_mesh/venting"]
transform = Transform( -0.668658, 0, -0.74357, 0, 1, 0, 0.74357, 0, -0.668658, -3.36525, 64.9085, 3.69804 )
emitting = false
amount = 20
lifetime = 8.77
speed_scale = 3.1
randomness = 0.23
local_coords = false
mesh = SubResource( 18 )
direction = Vector3( 4.954, 0, 0 )
spread = 4.5
gravity = Vector3( 0, -0.3, 0 )
initial_velocity = 2.41
initial_velocity_random = 0.53
scale_amount = 3.8
scale_amount_curve = SubResource( 19 )
color = Color( 0.466667, 0.466667, 0.466667, 1 )
color_ramp = SubResource( 20 )

[node name="venting_top2" type="CPUParticles" parent="booster_mesh/venting"]
transform = Transform( 0.742951, 0, -0.669346, 0, 1, 0, 0.669346, 0, 0.742951, 3.77414, 64.9085, 3.31829 )
emitting = false
amount = 20
lifetime = 8.77
speed_scale = 3.1
randomness = 0.23
local_coords = false
mesh = SubResource( 18 )
direction = Vector3( 4.954, 0, 0 )
spread = 4.5
gravity = Vector3( 0, -0.3, 0 )
initial_velocity = 2.41
initial_velocity_random = 0.53
scale_amount = 3.8
scale_amount_curve = SubResource( 19 )
color = Color( 0.466667, 0.466667, 0.466667, 1 )
color_ramp = SubResource( 20 )

[node name="exterior_engines" parent="booster_mesh" instance=ExtResource( 1 )]
particle_count = 50

[node name="Position3D" type="Position3D" parent="booster_mesh/exterior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.51615, 0.494311, 3.43263 )

[node name="Position3D2" type="Position3D" parent="booster_mesh/exterior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.35573, 0.494311, 4.00531 )

[node name="Position3D3" type="Position3D" parent="booster_mesh/exterior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0446078, 0.494311, 4.25397 )

[node name="Position3D4" type="Position3D" parent="booster_mesh/exterior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.24391, 0.494311, 4.02792 )

[node name="Position3D5" type="Position3D" parent="booster_mesh/exterior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.3968, 0.494311, 3.44017 )

[node name="Position3D6" type="Position3D" parent="booster_mesh/exterior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.37309, 0.494311, 2.50524 )

[node name="Position3D7" type="Position3D" parent="booster_mesh/exterior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.99362, 0.494311, 1.37174 )

[node name="Position3D8" type="Position3D" parent="booster_mesh/exterior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.21701, 0.494311, 0.0396782 )

[node name="Position3D9" type="Position3D" parent="booster_mesh/exterior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.00189, 0.494311, -1.26757 )

[node name="Position3D10" type="Position3D" parent="booster_mesh/exterior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.41446, 0.494311, -2.44243 )

[node name="Position3D11" type="Position3D" parent="booster_mesh/exterior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.50435, 0.494311, -3.35254 )

[node name="Position3D12" type="Position3D" parent="booster_mesh/exterior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.29639, 0.494311, -3.98134 )

[node name="Position3D13" type="Position3D" parent="booster_mesh/exterior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0139701, 0.494311, -4.17991 )

[node name="Position3D14" type="Position3D" parent="booster_mesh/exterior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.285, 0.494311, -4.02271 )

[node name="Position3D15" type="Position3D" parent="booster_mesh/exterior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.49296, 0.494311, -3.40218 )

[node name="Position3D16" type="Position3D" parent="booster_mesh/exterior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.41134, 0.494311, -2.45898 )

[node name="Position3D17" type="Position3D" parent="booster_mesh/exterior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.03187, 0.494311, -1.29239 )

[node name="Position3D18" type="Position3D" parent="booster_mesh/exterior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.24699, 0.494311, -0.00168962 )

[node name="Position3D19" type="Position3D" parent="booster_mesh/exterior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.06496, 0.494311, 1.30555 )

[node name="Position3D20" type="Position3D" parent="booster_mesh/exterior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.46098, 0.494311, 2.50524 )

[node name="Position3D21" type="Position3D" parent="booster_mesh/exterior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.46098, 0.494311, 2.50524 )

[node name="interior_engines" parent="booster_mesh" instance=ExtResource( 1 )]
particle_count = 50

[node name="Position3D" type="Position3D" parent="booster_mesh/interior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.33318, 0, -0.794275 )

[node name="Position3D2" type="Position3D" parent="booster_mesh/interior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.37455, 0, 0.719812 )

[node name="Position3D3" type="Position3D" parent="booster_mesh/interior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.50581, 0, 1.95259 )

[node name="Position3D4" type="Position3D" parent="booster_mesh/interior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.057917, 0, 2.42419 )

[node name="Position3D5" type="Position3D" parent="booster_mesh/interior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.37343, 0, 1.97741 )

[node name="Position3D6" type="Position3D" parent="booster_mesh/interior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.26699, 0, 0.785999 )

[node name="Position3D7" type="Position3D" parent="booster_mesh/interior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.30836, 0, -0.728087 )

[node name="Position3D8" type="Position3D" parent="booster_mesh/interior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.43962, 0, -1.9526 )

[node name="Position3D9" type="Position3D" parent="booster_mesh/interior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0165468, 0, -2.43247 )

[node name="Position3D10" type="Position3D" parent="booster_mesh/interior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.45617, 0, -1.99396 )

[node name="Position3D11" type="Position3D" parent="booster_mesh/interior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.463327, 0, -0.777731 )

[node name="Position3D12" type="Position3D" parent="booster_mesh/interior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.934928, 0, -0.0413713 )

[node name="Position3D13" type="Position3D" parent="booster_mesh/interior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.421959, 0, 0.785998 )

[node name="Position3D14" type="Position3D" parent="booster_mesh/interior_engines"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.421959, 0, 0.785998 )

[node name="EngineSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.814951, 0 )
stream = ExtResource( 3 )
unit_size = 100.0
